--- a/pagegestionmessage.ui
+++ b/pagegestionmessage.ui
@@ -23,21 +23,21 @@
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Intervenants : </string>
+      <string>intervenants : </string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>Reponse</string>
+      <string>reponse</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Nom du Ticket</string>
+      <string>Nom du ticket</string>
      </property>
     </widget>
    </item>
@@ -57,14 +57,14 @@
       <bool>false</bool>
      </property>
      <property name="text">
-      <string>Message </string>
+      <string>message </string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QPushButton" name="ajouterMessageButton">
      <property name="text">
-      <string>Ajouter un message </string>
+      <string>Ajouter un message</string>
      </property>
     </widget>
    </item>
